First commit, bootstrap linked

--- a/charity-master/app/views/welcome/index.html.erb
+++ b/charity-master/app/views/welcome/index.html.erb
@@ -1,2 +1,100 @@
-<h1>Welcome#index#hello this is nordin</h1>
+<h1 class = "welcome_title">Welcome to charity!!!</h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+
+<div class="row">
+  <div class="col-xs-12">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="/images/help.jpg" alt="Help">
+        </div>
+
+        <div class="item">
+          <img src="/images/eyes.jpg" alt="eyes">
+        </div>
+
+        <div class="item">
+          <img src="/images/hand.jpg" alt="hand">
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-4 col-md-3">
+    <div class = "welcome_item">
+      <div class = "welcome_item_picture">
+        <img src="/images/drugs.jpg" alt="Drugs needed"">
+      </div>
+      <h3 class = "welcome_item_title">Red cross</h3>
+
+        <img class = "welcome_item_logo"style="" src="/images/redcross.png" alt="Red Cross">
+
+      <div class = "welcome_item_description">
+        <span>Red Cross prevents and alleviates human suffering</span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class = "welcome_item">
+      <div class = "welcome_item_picture">
+        <img src="/images/drugs.jpg" alt="Drugs needed"">
+      </div>
+      <h3 class = "welcome_item_title">Red cross</h3>
+
+        <img class = "welcome_item_logo"style="" src="/images/redcross.png" alt="Red Cross">
+
+      <div class = "welcome_item_description">
+        <span>Red Cross prevents and alleviates human suffering</span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class = "welcome_item">
+      <div class = "welcome_item_picture">
+        <img src="/images/drugs.jpg" alt="Drugs needed"">
+      </div>
+      <h3 class = "welcome_item_title">Red cross</h3>
+
+        <img class = "welcome_item_logo"style="" src="/images/redcross.png" alt="Red Cross">
+
+      <div class = "welcome_item_description">
+        <span>Red Cross prevents and alleviates human suffering</span>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-4 col-md-3">
+    <div class = "welcome_item">
+      <div class = "welcome_item_picture">
+        <img src="/images/drugs.jpg" alt="Drugs needed"">
+      </div>
+      <h3 class = "welcome_item_title">Red cross</h3>
+
+        <img class = "welcome_item_logo"style="" src="/images/redcross.png" alt="Red Cross">
+
+      <div class = "welcome_item_description">
+        <span>Red Cross prevents and alleviates human suffering</span>
+      </div>
+    </div>
+  </div>
+</div>
+
